added center box

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
       <p>Tip-Calculator</p>
       <p class="calc">Easily calculate your total amount!</p>
     </div>
+    <div class="center">
+      <h1>Add values Below</h1>
+    </div>
   </body>
 </html>
